test.output
Traceback (most recent call last):
  File "publictest-full.py", line 6, in <module>
    import pycodestyle
  File "/usr/local/lib/python3.5/site-packages/pycodestyle.py", line 452
    yield found, f"{code} whitespace before '{char}'"
                                                    ^
SyntaxError: invalid syntax
